install(DIRECTORY cascade/avalon DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cascade USE_SOURCE_PERMISSIONS)
install(DIRECTORY cascade/de10 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cascade USE_SOURCE_PERMISSIONS)
install(DIRECTORY cascade/march DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cascade USE_SOURCE_PERMISSIONS)
install(DIRECTORY cascade/stdlib DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cascade USE_SOURCE_PERMISSIONS)
install(DIRECTORY cascade/ulx3s DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cascade USE_SOURCE_PERMISSIONS)
install(DIRECTORY cascade/verilator DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cascade USE_SOURCE_PERMISSIONS)
